add parsing with completablefutures